# Task-Engine

./: .gitignore  CMakeLists.txt  README.md
apps/: main.cpp
include/task_engine/: job.h  job_queue.h  logger.h  result.h  scheduler.h  thread_pool.h  types.h
src/: job.cpp  job_queue.cpp  logger.cpp  scheduler.cpp  thread_pool.cpp
